HHH-15339 Add foreign key part name as target key property name for fk optimization